# claude-code

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  CLAUDE.md  README.md  conftest.py  local.yml  pyproject.toml
.claude/: settings.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh  install-ecc-assets.sh  setup-project.sh
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: cd-stg.yml  ci.yml  claude-dedupe-issues.yml
.serena/: project.yml
Script/: run_devcontainer_claude_code.ps1
apps/agents/: admin.py  apps.py  models.py  runner.py  serializers.py  tools.py  urls.py  views.py
apps/articles/: admin.py  apps.py  managers.py  models.py  s3_presign.py  serializers.py  urls.py  views.py
apps/billing/: admin.py  apps.py  models.py  views.py
apps/boards/: admin.py  apps.py  mentions.py  models.py  s3_presign.py  serializers.py  services.py  urls.py  urls_posts.py  urls_threads.py  views.py
apps/bots/: admin.py  apps.py  models.py  views.py
apps/boxes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/common/: apps.py  blocking.py  cookie_auth.py  logging.py  muting.py  renderers.py  throttling.py  urls.py  views.py
apps/dm/: admin.py  apps.py  consumers.py  models.py  rate_limit.py  routing.py  s3_presign.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/follows/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py  urls_requests.py  views.py
apps/mentorship/: __init__.py  admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  urls_mentors.py  views.py
apps/moderation/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
apps/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  signals.py  urls.py  views.py
apps/reactions/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/search/: admin.py  apps.py  models.py  parser.py  services.py  urls.py  views.py
apps/tags/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
apps/timeline/: apps.py  cursor.py  models.py  services.py  urls.py  views.py
apps/translation/: apps.py  services.py
apps/tweets/: admin.py  apps.py  char_count.py  language_detection.py  managers.py  models.py  ogp.py  rendering.py  serializers.py  signals.py  tasks.py  urls.py  views.py  views_actions.py  views_translate.py
apps/users/: admin.py  apps.py  channels_auth.py  forms.py  managers.py  models.py  s3_presign.py  serializers.py  signals.py  social_pipeline.py  urls.py  urls_profile.py  validators.py  views.py
client/: .eslintrc.json  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
client/e2e/: agent.spec.ts  article-edit-loop.spec.ts  article-editor-image.spec.ts  articles-a-direction.spec.ts  articles.spec.ts  auto-translate.spec.ts  boards-a-direction.spec.ts  boards-scenarios.spec.ts  compose-from-any-page.spec.ts  conversation-a-direction.spec.ts  dm-attachment-display.spec.ts  dm-kick-leave.spec.ts  dm-paste-attach.spec.ts  dm-room-invite.spec.ts  drafts.spec.ts  explore-a-direction.spec.ts  favorites.spec.ts  home-a.spec.ts  login-button-visibility.spec.ts  mentor-board.spec.ts  mentor-review.spec.ts  messages-a-direction.spec.ts  moderation-scenarios.spec.ts  near-me-search.spec.ts  notifications-a-direction.spec.ts  notifications-scenarios.spec.ts  onboarding-residence.spec.ts  phase1.spec.ts  phase2-extended.spec.ts  phase2.spec.ts  phase3.spec.ts  private-account.spec.ts  profile-a-direction.spec.ts  profile-edit.spec.ts  reactions-scenarios.spec.ts  realtime-tweet-actions.spec.ts  repost-cascade-soft-delete.spec.ts  repost-quote-state-machine.spec.ts  residence.spec.ts  search-a-direction.spec.ts  (+5 more)
config/: asgi.py  celery_app.py  openapi.py  urls.py
config/settings/: base.py  local.py  production.py
docs/: A11Y.md  ARCHITECTURE.md  CLAUDE_CODE.md  ER.md  REVIEW_CONSOLIDATED.md  ROADMAP.md  SPEC.md  WORKFLOW.md  db-schema.md
docs/adr/: 0000-record-architecture-decisions.md  0001-use-ecs-fargate-for-stg.md  0002-fulltext-search-backend.md  0003-jwt-httponly-cookie-auth.md  README.md
docs/issues/: phase-0.5-followups.md  phase-0.5.md  phase-0.md  phase-1.md  phase-11.md  phase-2.md  phase-3-attachment-display.md  phase-3-followups.md  phase-3.md  phase-4b.md  phase-5.md  phase-6.md
docs/operations/: api-codegen.md  ci-cd.md  dm-channels-runbook.md  dm-incident-runbook.md  dm-s3-runbook.md  dns-delegation.md  email-auth.md  google-oauth.md  infrastructure.md  markdown.md  phase-1-stg-deploy-runbook.md  phase-3-stub-bridges.md  s3-presigned-upload.md  stg-deployment.md  stg-recovery-runbook.md  testing.md  tf-state-bootstrap.md  throttling.md  tweet-char-count.md
docs/specs/: article-edit-loop-spec.md  article-editor-enhancements-spec.md  article-image-upload-spec.md  articles-a-direction-spec.md  articles-auth-gate-spec.md  articles-mobile-anon-ux-spec.md  articles-publish-toast-spec.md  articles-title-h1-duplicate-spec.md  auto-translate-spec.md  boards-a-direction-spec.md  boards-e2e-commands.md  boards-scenarios.md  boards-spec.md  claude-agent-spec.md  compose-from-any-page-spec.md  composer-autosave-spec.md  conversation-a-direction-spec.md  dm-attachment-display-e2e-commands.md  dm-attachment-display-scenarios.md  dm-attachment-display-spec.md  dm-room-invite-spec.md  explore-a-direction-spec.md  favorites-spec.md  home-layout-spec.md  login-button-fix-spec.md  mentor-board-e2e-commands.md  mentor-board-scenarios.md  mentor-board-spec.md  messages-a-direction-spec.md  moderation-spec.md  (+30 more)
requirements/: base.txt  local.txt
scripts/: README.md  _parse_issues.py  auto-close-duplicates.ts  backfill-duplicate-comments.ts  bootstrap-tf-state.sh  create-labels.sh  export-claude-session.py  run-tests-local.sh
terraform/: README.md  backend.tf  versions.tf
(+551 files in other folders)
